@@ -1,5 +1,7 @@
 use Test2::Bundle::Extended -target => 'Test2::Compare::Array';
 
+use lib 't/lib';
+
 isa_ok($CLASS, 'Test2::Compare::Base');
 is($CLASS->name, '<ARRAY>', "got name");
 
@@ -230,5 +232,24 @@ subtest deltas => sub {
         "Filter worked, but input is still wrong"
     );
 };
+
+{
+  package Foo::Array;
+  use base 'MyTest::Target';
+
+  sub new {
+      my $class = shift;
+      bless [ @_ ] , $class;
+  }
+}
+
+subtest objects_as_arrays => sub {
+
+    my $o1 = Foo::Array->new( 'b' ) ;
+    my $o2 = Foo::Array->new( 'b' ) ;
+
+    is ( $o1, $o2, "same" );
+};
+
 
 done_testing;
