@@ -1,5 +1,7 @@
 use Test2::Bundle::Extended -target => 'Test2::Compare::OrderedSubset';
 
+use lib 't/lib';
+
 isa_ok($CLASS, 'Test2::Compare::Base');
 is($CLASS->name, '<ORDERED SUBSET>', "got name");
 
@@ -91,6 +93,23 @@ subtest deltas => sub {
         [],
         "No delta, not checking ending"
     );
+};
+
+{
+  package Foo::OO;
+
+  use base 'MyTest::Target';
+
+  sub new {
+      my $class = shift;
+      bless [ @_ ] , $class;
+  }
+}
+
+subtest object_as_arrays => sub {
+    my $o1 = Foo::OO->new( 'b') ;
+
+    is ( $o1 , subset{  item 'b' }, "same" );
 };
 
 done_testing;
