@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Ensure that objects are not used in Boolean contexts, second
+      attempt. (djerius)
+
 0.000084  2017-11-18 16:17:29-08:00 America/Los_Angeles
 
     - Add Test2::Tools::Tester
